--- a/style.css
+++ b/style.css
@@ -78,14 +78,6 @@ q {
 }
 
 /* random <div> styles */
-.content {
-  margin-left: 350px;
-  padding: 20px; /* Optional: aligns text normally */
-}
-.top {
-  border: 2px #c00 solid;
-  border-radius: 5px;
-}
 .warning {
   border: 3px #ff0000 solid;
   background-color: #ba1109;
@@ -103,28 +95,21 @@ q {
 }
 
 /* baseline <div> styles */
+.layout {
+  display: flex;
+}
+.content {
+  margin-left: 30%;
+  padding: 0.5%; /* Optional: aligns text normally */
+}
 .sidediv {
-    padding: 10px;
+  overflow-y: auto;
+  width: 30%;
 }
 
 /* CRT/DISPLAY SCREEN CSS */
 .crt {
   animation: textShadow 1.7s infinite;
-}
-.scanline {
-  width: 100%;
-  height: 100px;
-  z-index: 8;
-  background: linear-gradient(
-      0deg,
-      rgba(0, 0, 0, 0) 0%,
-      rgba(255, 255, 255, 0.2) 10%,
-      rgba(0, 0, 0, 0.1) 100%
-  );
-  opacity: 0.1;
-  position: absolute;
-  bottom: 100%;
-  animation: scanline 10s linear infinite;
 }
 /* fonts */
 @font-face {
