--- a/style.css
+++ b/style.css
@@ -38,14 +38,16 @@ html {
   text-align: center;
   color: #f5f5f5;
   font-size: 25px;
-  background-image: url('images/bgimg.png')
+  background-image: url('images/bgimg.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;  
 }
 .error {
   font-family: 'Courier New', Courier, monospace;
   font-size: 0.75rem;
 }
 body {
-  background-color: rgba(18, 16, 16, 0.95);
   color: #36d974;
 }
 a {
@@ -97,14 +99,18 @@ q {
 /* baseline <div> styles */
 .layout {
   display: flex;
+  justify-content: space-evenly;
 }
 .content {
-  margin-left: 30%;
+  width: 70%;
   padding: 0.5%; /* Optional: aligns text normally */
 }
 .sidediv {
   overflow-y: auto;
+  overflow-x: hidden;
   width: 30%;
+  padding-left: 1.5%;
+  padding-top: 1%;
 }
 
 /* CRT/DISPLAY SCREEN CSS */
