--- a/style.css
+++ b/style.css
@@ -72,7 +72,9 @@ footer {
   color: rgba(143, 255, 232, 1);
 }
 img {
-  width: 50%;
+  max-width: 100%;
+  height: auto;
+  min-width: 10%;
 }
 * {
   margin: 0;
