--- a/style.css
+++ b/style.css
@@ -43,6 +43,9 @@
     opacity: 1;
   }
 }
+@keyframes move {
+  to {transform: translateX(-120%);}
+}
 /* base HTML */
 html {
   font-family: 'Comic Neue', Tahoma, Verdana, sans-serif;
@@ -61,35 +64,14 @@ html {
 body {
   color: #36d974;
 }
-a {
-  color: #f0f0f0;
-}
-a:hover {
-  color: #ffd700;
-}
 footer {
   background-color: rgba(8, 181, 191, 0.75);
   color: rgba(143, 255, 232, 1);
-}
-img {
-  max-width: 100%;
-  height: auto;
-  min-width: 10%;
 }
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-a {
-  text-decoration: none;
-}
-ul {
-  list-style-type: none;
-}
-q {
-  font-size: 0.75rem;
-  font-family:'Times New Roman', Times, serif;
 }
 
 /* non-<div> styles */
@@ -107,6 +89,58 @@ p.fineprint:hover {
 #loading {
   animation:blink 1.06s infinite;
   display:none;
+}
+a {
+  text-decoration: none;
+  color: #f0f0f0;
+}
+a:hover {
+  color: #ffd700;
+}
+ul {
+  list-style-type: none;
+}
+q {
+  font-size: 0.75rem;
+  font-family:'Times New Roman', Times, serif;
+}
+img {
+  max-width: 100%;
+  height: auto;
+  min-width: 10%;
+}
+button {
+  background-color: #f0f0f0;
+  box-shadow: 3px 3px 1px 3px #b1b1b1, -3px -3px 1px 3px #b1b1b1, -3px 3px 1px 3px #b1b1b1, 3px -3px 1px 3px #b1b1b1;
+  border-radius: 0.075rem;
+  border: 1px solid #cdcdcdcd;
+  padding: 2px;
+  transition-property: all;
+  transition-duration: 500ms;
+  transition-behavior: allow-discrete;
+  transition-delay: 100ms;
+  font-family: Consolas, Monaco, monospace;
+}
+button:hover {
+  background-color: #9e9e9e;
+  box-shadow: 2px 2px 1px 2px #6e6e6e, -2px -2px 1px 2px #6e6e6e, -2px 2px 1px 2px #6e6e6e, 2px -2px 1px 2px #6e6e6e;
+  border-radius: 0.075rem;
+  border: 0px solid #bebebecd;
+  padding: 5px;
+  font-family: Consolas, Monaco, monospace;
+}
+
+/* responsiveness tweak */
+@media screen and (width < 683px) {
+  h1 {
+    font-size: 0.8em;
+  }
+  p.fineprint {
+    font-size: 0.5em;
+  }
+  p {
+    font-size: 0.6em;
+  }
 }
 
 /* random <div> styles */
@@ -130,10 +164,14 @@ p.fineprint:hover {
 .layout {
   display: flex;
   justify-content: space-evenly;
+  overflow: hidden;
+  height: 100vh;
 }
 .content {
   width: 70%;
   padding: 0.5%; /* Optional: aligns text normally */
+  height: 100%;
+  overflow-y: auto;
 }
 .sidediv {
   overflow-y: auto;
@@ -141,6 +179,7 @@ p.fineprint:hover {
   width: 30%;
   padding-left: 1.5%;
   padding-top: 1%;
+  height:100%;
 }
 
 /* a,b,c,d,e etc <div> styles */
@@ -152,6 +191,54 @@ p.fineprint:hover {
 }
 .sidediva:hover, .sidediva:focus {
   border: 5px solid #6000d5;
+}
+.sidedivb {
+  border: 3px solid #ba1109;
+  width: auto;
+  padding: 1%;
+  overflow-x: hidden;
+  background-color: rgba(18, 16, 16, 0.95);
+  color: #36d974;
+  font-family: Consolas, Monaco, monospace;
+  background-image: linear-gradient(
+    to bottom,
+    rgba(18, 16, 16, 0) 50%,
+    rgba(0, 0, 0, 0.25) 50%
+  );
+  background-size: 100% 8px;
+  background-attachment: fixed;
+  background-repeat: repeat-y;
+  position:relative;
+}
+.sdbcontent {
+  transform: translateX(100%);
+  display: inline-block;
+  width: 100%;
+  animation: move 15s linear infinite;
+  white-space: nowrap;
+}
+
+/* scrollbar CSS */
+.content,.sidediv {
+  scrollbar-color: #86ffb5 rgba(0, 219, 157, 0.1);
+}
+.content::-webkit-scrollbar,.sidediv::-webkit-scrollbar {
+  width: 0.5rem;
+}
+.content::-webkit-scrollbar-track,.sidediv::-webkit-scrollbar-track {
+  background-color: rgba(0, 219, 157, 0.1);
+  border-left: 2px solid rgba(0,219,157,0.9);
+}
+.content::-webkit-scrollbar-thumb,.sidediv::-webkit-scrollbar-thumb {
+  background: #86ffb5;
+  transition-property: background;
+  transition-duration: 200ms;
+  border: 2px solid rgba(18, 16, 16, 0.9);
+  border-radius: 0.25rem;
+  box-shadow: inset 0 0 4px rgba(54, 217, 116, 0.8), 0 0 6px rgba(54, 217, 116, 0.5);
+}
+.content::-webkit-scrollbar-thumb:hover,.sidediv::-webkit-scrollbar-thumb:hover {
+    background: #21c7ff;
 }
 
 /* CRT/DISPLAY SCREEN CSS */
@@ -174,4 +261,7 @@ p.fineprint:hover {
 }
 @font-face{
   font-family: 'ikibimi'; src: url('https://bionik-aster.github.io/fonts/AncientIkibimi-Regular.ttf');
+}
+@font-face{
+  font-family: 'Univers 57 Condensed Oblique'; src: url('https://bionik-aster.github.io/fonts/Univers57Condensed-Oblique.otf');
 }
