--- a/mainframe.css
+++ b/mainframe.css
@@ -14,6 +14,15 @@ input[type=text] {
     color: #ffffff;
     font-family: 'Consolas', monospace;
     font-size: 1rem;
+    width: 100vw;
+}
+.cmd-input {
+  resize: none;
+  overflow: hidden;
+  width: 100%;
+  font-family: 'Consolas', monospace;
+  white-space: pre-wrap;
+  word-break: break-word;
 }
 .screen-title {
     padding-bottom: 0.5rem;
