--- a/mainframe.css
+++ b/mainframe.css
@@ -4,7 +4,7 @@
     font-size: 20px;
     color: #ffffff;
 }
-input[type=text] {
+textarea {
     background-color: #000000;
     border: none;
     outline: none;
